<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

        <TextView
            android:id="@+id/textView"
            android:layout_width="380dp"
            android:layout_height="26dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:text="@string/kumpulan_gambar_kucing"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="153dp"
        android:layout_height="192dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/catb"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/image_2" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="60dp"
        android:text="@string/lucu"
        app:layout_constraintEnd_toStartOf="@+id/checkBox3"
        app:layout_constraintTop_toBottomOf="@+id/imageView7" />

    <CheckBox
        android:id="@+id/checkBox3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="4dp"
        android:text="@string/kaget"
        app:layout_constraintEnd_toEndOf="@+id/imageView7"
        app:layout_constraintTop_toBottomOf="@+id/imageView7" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/kirim"
        app:layout_constraintEnd_toEndOf="@+id/checkBox3"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="@+id/checkBox"
        app:layout_constraintTop_toBottomOf="@+id/checkBox2" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="201dp"
        android:layout_height="122dp"
        android:layout_marginTop="232dp"
        android:layout_marginEnd="4dp"
        android:contentDescription="@string/catd"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/imageView3"
        app:srcCompat="@drawable/image_5" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="330dp"
        android:layout_height="176dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="44dp"
        android:contentDescription="@string/catf"
        app:layout_constraintEnd_toEndOf="@+id/imageView5"
        app:layout_constraintStart_toStartOf="@+id/imageView6"
        app:layout_constraintTop_toBottomOf="@+id/imageView5"
        app:srcCompat="@drawable/image_6" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="174dp"
        android:layout_height="155dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:contentDescription="@string/cate"
        app:layout_constraintEnd_toStartOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:srcCompat="@drawable/image_4" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/takut"
        app:layout_constraintEnd_toStartOf="@+id/checkBox2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/imageView7"
        app:layout_constraintTop_toBottomOf="@+id/imageView7" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="144dp"
        android:layout_height="222dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/catc"
        app:layout_constraintEnd_toStartOf="@+id/imageView2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/image_3" />


</androidx.constraintlayout.widget.ConstraintLayout>